fix(fp-1678): do not let button overlap `<th>`

--- a/client/src/styles/objects/o-fixed-header-table.css
+++ b/client/src/styles/objects/o-fixed-header-table.css
@@ -27,4 +27,7 @@ Styleguide Objects.FixedHeaderTable
 .o-fixed-header-table th {
   position: sticky;
   top: 0;
+
+  z-index: 1; /* so table content (e.g. button)¹ does not scroll over <th> */
+              /* (table content with a `position` value other than static) */
 }
